--- a/main.tex
+++ b/main.tex
@@ -274,7 +274,7 @@ Se $c \colon I \to M$ é uma curva e $V$ é um campo ao longo de $c$, então diz
 
 Uma geodésica $c \colon I \to M$ é \textit{maximal} se não podemos estender $c$ para um intervalo maior do que $I$ sem que a curva deixe de ser uma geodésica. Do Teorema \ref{geodesicas_existencia} temos que, dado $p \in M$ e $X_p \in T_pM$ existe uma única geodésica maximal $c$ com $c(0) = p$ e $c'(0) = X_p$. Vamos denotar essa geodésica por $\gamma_{X_p}$.
 
-O \textit{mapa exponencial} em um ponto $p \in M$ é a função dada por $\Exp_p(X_p) = \gamma_{X_p}(1)$. Esse mapa não está necessariamente definido para todo $X_p \in T_pM$, visto que nem sempre $\gamma_{X_p}$ possui $1$ no seu domínio. Uma variedade com uma conexão é dita \textit{completa} se toda geodésica puder ter seu domínio extendido para todo $\mathbb{R}$. No caso de variedades riemannianas consideradas com a conexão de Levi-Civitta, temos dois resultados que nos ajudam no sentido de definir $\Exp_p$ para um conjunto satisfatório de vetores.
+O \textit{mapa exponencial} em um ponto $p \in M$ é a função dada por $\Exp_p(X_p) = \gamma_{X_p}(1)$. Esse mapa não está necessariamente definido para todo $X_p \in T_pM$, visto que nem sempre $\gamma_{X_p}$ possui $1$ no seu domínio. Uma variedade comuma conexão é dita \textit{completa} se toda geodésica puder ter seu domínio extendido para todo $\mathbb{R}$. No caso de variedades riemannianas consideradas com a conexão de Levi-Civitta, temos dois resultados que nos ajudam no sentido de definir $\Exp_p$ para um conjunto satisfatório de vetores.
 
 \begin{proposition}
     Para qualquer $p \in M$, com $M$ variedade riemanniana, existem uma vizinhança $U$ de $p$ e dois números $\epsilon, \delta > 0$ tais que para todos $q \in U$ e $v \in T_qM$ com $||v|| < \delta$, existe uma única geodésica $\gamma \colon ]-\varepsilon, \varepsilon[ \to M$ com $\gamma(0) = q$ e $\gamma'(0) = v$.
@@ -285,6 +285,8 @@ O \textit{mapa exponencial} em um ponto $p \in M$ é a função dada por $\Exp_p
 \end{corollary}
 
 O Corolário \ref{geodesicas_intervalo} nos diz que o mapa exponencial está sempre definido em todas as direções, porém essa existência só está garantida para velocidades pequenas. Se você for muito rápido, pode ficar cansado muito rápido e não dar tempo do seu conjunto de parâmetros englobar o $1$.
+
+gvetg
 
 \subsection{Curvatura}
 
