--- a/bib.bib
+++ b/bib.bib
@@ -19,5 +19,14 @@
 @unpublished{bot,
   author = {Hugo Cattarucci Botós},
   title  = {Geometrias Clássicas},
-  year   = {2020}
+  year   = {2020},
+  url = {https://github.com/HugoCBotos/geometria-classica/blob/master/Geometrias%20Cl%C3%A1ssicas%20-%20Hugo%20C.%20Bot%C3%B3s.pdf}
+}
+
+@unpublished{angy,
+  author = {Anna Wienhard e Gye-Seon Lee},
+  title = {Curvature of Riemannian Manifolds},
+  year = {2015},
+  url = {https://www.mathi.uni-heidelberg.de/~lee/Soeren05.pdf}
+  
 }
